--- a/src/components/pages/CrewPage/styles.module.scss
+++ b/src/components/pages/CrewPage/styles.module.scss
@@ -163,7 +163,7 @@
             text-align: start;
             font-size: 20px;
             line-height: 24px;
-            letter-spacing: 3.38;
+            letter-spacing: 3.38px;
             span {
               padding-right: 16px;
             }
