--- a/src/components/pages/HomePage/styles.module.scss
+++ b/src/components/pages/HomePage/styles.module.scss
@@ -60,7 +60,7 @@
         text-transform: uppercase;
         font-family: $font-big;
         font-size: 32px;
-        line-height: 36.67pxpx;
+        line-height: 36.67px;
         padding-top: 119px;
         border-radius: 50%;
         margin: 0 auto;
