--- a/src/components/Navigation/NavBar/Navbar.scss
+++ b/src/components/Navigation/NavBar/Navbar.scss
@@ -39,7 +39,7 @@
     background-color: rgba(255, 255, 255, 0.04);
     backdrop-filter: blur(81.5485px);
     flex-grow: 0;
-    
+
     .nav-menu-item {
       .nav-menu-item-link{
         font-family: $font-middle;
@@ -67,6 +67,14 @@
       } 
     }
   }
+  @supports ((-webkit-backdrop-filter: none) or (backdrop-filter: none)) {
+    .nav_menu {
+      background-color: rgba(255, 255, 255, 0.04);
+      -webkit-backdrop-filter: blur(81.5485px);
+      backdrop-filter: blur(81.5485px);
+    }
+  }
+  
   .hamburger {
     display: none;
   }
